--- a/ds_app/templates/ds_app/index.html
+++ b/ds_app/templates/ds_app/index.html
@@ -1,10 +1,140 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>DS-Motors</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="">
+
+	<link rel="shortcut icon" href="{%static 'ds_app/images/logo.jpg'%}" type="image/png">
+	<link rel="stylesheet" href= "{%static 'ds_app/assets/css/style.css'%}" />
+
+	<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet"> 
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+
+
+
 </head>
 <body>
-	<h1>DS-Motors</h1>
+
+	<div class="wr">
+	
+		
+
+	<div class="main_header">
+		<div class="row flex-wrap">
+			<div class="logo col-sm-6 col-md-3">
+				<img src= "{%static '/ds_app/images/ds-big-logo.png'%}" alt ="DS-MOTORS"> 	
+		
+			</div>
+
+			<div class="adress col-sm-6 col-md-3">
+				<!--Ваш город: 
+				<select class="custom-select custom-select-sm">
+				  <option selected>Петрозаводск</option>
+				  <option value="1">Москва</option>
+				</select>-->
+				<div class="adr-wrapper">
+						<form class="form-inline">
+						  <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Ваш город:</label>
+						  <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
+						     <option selected>Петрозаводск</option>
+						    <option value="1">Москва</option>
+						  </select>
+
+						</form>
+
+
+						<ul class = 'adress-ul'>
+						<li id ='adr-info'></li>
+						<li id="adr-tel"></li>
+						<li id ="adr-grafic"></li>
+						</ul>
+
+				</div>
+
+
+			</div>
+
+			
+		</div>
+	</div>
+
+
+<div class="row">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	  
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <ul class="navbar-nav mx-auto">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Link</a>
+	      </li>
+	      <li class="nav-item dropdown">
+	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	          Dropdown
+	        </a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	          <a class="dropdown-item" href="#">Action</a>
+	          <a class="dropdown-item" href="#">Another action</a>
+	          <div class="dropdown-divider"></div>
+	          <a class="dropdown-item" href="#">Something else here</a>
+	        </div>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link disabled" href="#">Disabled</a>
+	      </li>
+	    </ul>
+	    
+	  </div>
+
+	</nav>
+</div>
+
+<div class="row sticky-top">
+	
+		<form class='searchForm col-12 col-sm-10 offset-sm-1 col-md-10 offset-md-1'>
+	      <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+	      <button class="btn btn-outline-danger" type="submit">Search</button>
+	    </form>
+	
+</div>
+
+<div class="row">
+	<div class="tester">
+		
+	</div>
+</div>
+
+
+
+
+	
+
+</div>
+
+
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		
+
+	<script src="{%static 'ds_app/assets/js/main.js'%}"></script>
+
+	
+
 </body>
 </html>
+
