--- a/ds_app/templates/ds_app/index.html
+++ b/ds_app/templates/ds_app/index.html
@@ -26,7 +26,7 @@
 		
 
 	<div class="main_header">
-		<div class="row flex-wrap">
+		<div class="row flex-wrap justify-content-between">
 			<div class="logo col-sm-6 col-md-3">
 				<img src= "{%static '/ds_app/images/ds-big-logo.png'%}" alt ="DS-MOTORS"> 	
 		
@@ -60,12 +60,27 @@
 
 			</div>
 
+			<div class="col-sm-6 col-md-3 zakaz-outer">
+			
+			
+					<div class="zakaz-inner">
+						<button type="button" class="btn btn-warning">Оформить заказ</button>
+		
+					
+				</div>
+			</div>
+
+			<div class="col-sm-6 col-md-3 sampo">
+				<img src= "{%static '/ds_app/images/sampo.png'%}" alt ="Группа компаний Сампо"> 	
+		
+			</div>
+		
 			
 		</div>
-	</div>
+	</div> 
 
 
-<div class="row">
+<div class="row sticky-top searcher">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 	  
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,45 +89,215 @@
 
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    <ul class="navbar-nav mx-auto">
+	      <li class="nav-item active main-m">
+	        <a class="nav-link" href="#">О компании <span class="sr-only">(current)</span></a>
+	      </li>
+	      <!--
 	      <li class="nav-item active">
-	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="#">Наши партнеры</a>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">Link</a>
-	      </li>
-	      <li class="nav-item dropdown">
+			-->
+			<li class="nav-item active dropdown main-m">
 	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          Dropdown
+	          Наши партнеры
 	        </a>
 	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-	          <a class="dropdown-item" href="#">Action</a>
-	          <a class="dropdown-item" href="#">Another action</a>
+	          <a class="dropdown-item" href="#">Atlas-Copco</a>
+	          <a class="dropdown-item" href="#">Epiroc</a>
+	           <a class="dropdown-item" href="#">Klampfer</a>
 	          <div class="dropdown-divider"></div>
-	          <a class="dropdown-item" href="#">Something else here</a>
+	          <a class="dropdown-item" href="#">Сделать заказ</a>
 	        </div>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link disabled" href="#">Disabled</a>
+	      <li class="nav-item active dropdown main-m">
+	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	          Запчасти
+	        </a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	          <a class="dropdown-item" href="#">Каталог</a>
+	          <a class="dropdown-item" href="#">Поиск по номеру</a>
+	          <div class="dropdown-divider"></div>
+	          <a class="dropdown-item" href="#">Сделать заказ</a>
+	        </div>
+	      </li>
+	      <li class="nav-item active main-m">
+	        <a class="nav-link" href="#">Контакты</a>
 	      </li>
 	    </ul>
+	    <form class='searchForm'>
+	      <input class="form-control" type="search" placeholder="Поиск по артикулу" aria-label="Search">
+	      <button class="btn btn-outline-danger" type="submit">Поиск</button>
+	    </form>
 	    
 	  </div>
 
 	</nav>
 </div>
 
-<div class="row sticky-top">
+		
 	
-		<form class='searchForm col-12 col-sm-10 offset-sm-1 col-md-10 offset-md-1'>
-	      <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-	      <button class="btn btn-outline-danger" type="submit">Search</button>
-	    </form>
-	
+
+
+<div class="row content-border">
+	<div class="tester col-sm-8 offset-sm-2">
+		
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="{%static '/ds_app/images/bslide2.jpg'%}" alt="1 slide">
+		  <div class="carousel-caption d-none d-md-block">
+		  	<div class="slide-1-data">
+			    <h4>Добро пожаловать в <span style='color:#FDC300;'><strong>DS-MOTORS!</strong></span></h4>
+			    <br>
+			    <p>У нас Вы сможете найти весь спектр услуг по подбору и заказу запасных частей, обслуживанию, а так же осуществить доставку с выбранной Вами логистикой.
+				 </p>
+				 <br>
+				 <button class="btn btn-warning" type="submit">Подробно</button>
+
+			    
+		    </div>
+  		</div>
+
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{%static '/ds_app/images/bslide22.jpg'%}" alt="2 slide">
+       <div class="carousel-caption d-none d-md-block">
+		   <div class="slide-1-data">
+			    <h4>Ключевой партнер <span style='color:#4fb0f9;'><strong>Atlas-Copco</strong></span></h4>
+			    <br>
+			    <p>Atlas-Copco - является ведущим мировым поставщиком решений для бизнеса.
+				 </p>
+				 <br>
+				 <button class="btn btn-warning" type="submit">Подробно</button>
+
+			    
+		    </div>
+  		</div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{%static '/ds_app/images/bslide33.jpeg'%}" alt="3 slide">
+       <div class="carousel-caption d-none d-md-block">
+		    <div class="slide-1-data">
+			    <h4>Партнерство с <span style='color:#FDC300;'><strong>Epiroc</strong></span></h4>
+			    <br>
+			    <p>Epiroc - шведская промышленная компания, основанная в 2018г от акционеров Atlac-Copco. Мировой поставщик в области строительной техники и технологий.
+
+				 </p>
+				 <br>
+				 <button class="btn btn-warning" type="submit">Подробно</button>
+
+			    
+		    </div>
+
+  		</div>
+    </div>
+	<div class="carousel-item">
+      <img class="d-block w-100" src="{%static '/ds_app/images/bslide44.jpg'%}" alt="4 slide">
+       <div class="carousel-caption d-none d-md-block">
+		    <div class="slide-1-data">
+			    <h4>Сотрудничество с <span style='color:#7827aa;'><strong>Klampfer</strong></span></h4>
+			    <br>
+			    <p>Основная специализация - электрооснащение промышленных объектов.
+
+				 </p>
+				 <br>
+				 <button class="btn btn-warning" type="submit">Подробно</button>
+
+			    
+		    </div>
+
+  		</div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{%static '/ds_app/images/bslide55.jpg'%}" alt="4 slide">
+       <div class="carousel-caption d-none d-md-block">
+		    <div class="slide-1-data">
+			    <h4>Транспортная доступность с <span style='color:#9b1232;'><strong>ТЛК СОЮЗ</strong></span></h4>
+			    <br>
+			    <p>Доставка и логистика.
+
+				 </p>
+				 <br>
+				 <button class="btn btn-warning" type="submit">Подробно</button>
+
+			    
+		    </div>
+
+  		</div>
+    </div>
+
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
-<div class="row">
-	<div class="tester">
-		
+	<div class="about">
+
+			<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="{%static '/ds_app/images/atlas.jpeg'%}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title"><strong>Atlas-Copco</strong></h5>
+      <ul class="card-spisok">
+      	<li>Компрессоры</li>
+      	<li>Генераторы</li>
+      	<li>Насосы</li>
+      	<li>Мотопомпы</li>
+      </ul>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="{%static '/ds_app/images/Epiroc-card.jpeg'%}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title"><strong>Epiroc</strong></h5>
+      <ul class="card-spisok">
+      	<li>Буровая техника</li>
+      	<li>Расходные материалы</li>
+      	<li>Навесное гидравлическое оборудование</li>
+      </ul>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="{%static '/ds_app/images/klampf-card.jpg'%}" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title"><strong>Klampfer</strong></h5>
+      <ul class="card-spisok">
+      	<li>Распределительные системы и электрофикация</li>
+      	<li>Электрофикация промышленных и гражданских сооружений</li>
+      	<li>Электромонтаж</li>
+      </ul>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+	</div>
+
+
 	</div>
 </div>
 
@@ -132,8 +317,125 @@
 		
 
 	<script src="{%static 'ds_app/assets/js/main.js'%}"></script>
+	<!--
+	<script>
 
-	
+
+//used for tabs
+//still learning. be kind.
+
+//get tabs module parent
+var tabsModule = document.body.querySelector(".ns-TabsModule");
+//get tab nav
+var tabNavList = document.body.querySelector(".ns-TabNav");
+//get all tab nav links
+var tabNavLinks = document.querySelectorAll(".ns-TabNav_Link");
+//get tab nav current link indicator
+var tabNavCurrentLinkindicator = tabNavList.querySelector(".ns-TabNav_Indicator");
+//get all tab panel elements
+var tabPanels = document.querySelectorAll(".ns-TabPanel");
+
+//show tab panel A first because panel A nav link has indicator on page load
+document.getElementById("ns-TabPanelA").style.display = "block";
+
+/**
+* position indicator function
+*/
+function positionIndicator() {
+  //get left position of tab nav ul
+  var tabNavListLeftPosition = tabNavList.getBoundingClientRect().left;
+  //get tab module parent current data value
+  var tabsModuleSectionDataValue = tabsModule.getAttribute("data-active-tab") || "A";
+  //get nav link span with data value that matches current tab module parent data value
+  var tabNavCurrentLinkText = tabNavList.querySelector("[data-tab='" + tabsModuleSectionDataValue + "'] span");
+  //get dimensions of current nav link span
+  var tabNavCurrentLinkTextPosition = tabNavCurrentLinkText.getBoundingClientRect();
+  //set indicator left position via CSS transform
+  //current nav link span left position - tab nav ul left position
+  //prefix me for live
+  tabNavCurrentLinkindicator.style.transform =
+    "translate3d(" +
+    (tabNavCurrentLinkTextPosition.left - tabNavListLeftPosition) +
+    "px,0,0) scaleX(" +
+    tabNavCurrentLinkTextPosition.width * 0.01 +
+    ")";
+}
+/**
+* fire position indicator function right away
+*/
+positionIndicator();
+
+/**
+* hide all tab panels function
+*/
+function hideAllTabPanels() {
+  //loop through all tab panel elements
+  for (i = 0; i < tabPanels.length; i++) {
+    //remove style attribute from each tab panel element to hide them
+    tabPanels[i].removeAttribute("style");
+  }
+};
+
+/**
+* tab nav link function
+* tab nav link event shows matching panel and positions the indicator
+*/
+var tabNavLinkEvent = function() {
+  //get this link data value
+  var thisLink = this.getAttribute("data-tab");
+  //get this link href value
+  var thisHref = this.getAttribute("href");
+  //get tab panel element with ID that matches this link href value
+  var thisTabPanel = document.querySelector(thisHref);
+  //set tab module parent data to this link data value
+  tabsModule.setAttribute("data-active-tab", thisLink);
+  //fire hide all tab panels function
+  hideAllTabPanels();
+  //get tab panel element with ID that matches this link href value and set its style to show it
+  thisTabPanel.style.display = "block";
+  //fire the position indicator function
+  positionIndicator();
+};
+
+/**
+* loop through all nav links and add event
+* need to change to parent element and use e.target maybe
+*/
+for (var i = 0; i < tabNavLinks.length; i++) {
+  //for each nav link, add click event that fires tab nav link click event function
+  tabNavLinks[i].addEventListener("click", tabNavLinkEvent, false);
+}
+
+/** 
+* should really position indicator from parent left edge rather than body, 
+* to keep indicator in position on resize. meh
+* for now, here's a quick win because i'm tired 
+* https://developer.mozilla.org/en-US/docs/Web/Events/resize 
+*/
+(function() {
+  window.addEventListener("resize", resizeThrottler, false);
+  //someone smarter than me code
+  var resizeTimeout;
+  function resizeThrottler() {
+    if (!resizeTimeout) {
+      resizeTimeout = setTimeout(function() {
+        resizeTimeout = null;
+        actualResizeHandler();
+      }, 66);
+    }
+  }
+  //function to fire after resize timeout delay
+  function actualResizeHandler() {
+    //fire the position indicator function
+    positionIndicator();
+  }
+})();
+
+
+	</script>
+
+-->
+
 
 </body>
 </html>
