--- a/ds_app/templates/ds_app/index.html
+++ b/ds_app/templates/ds_app/index.html
@@ -292,10 +292,47 @@
 
 
 
+	</div> <!--end about-->
+
+	<div class="send-sviaz">
+		<div class="col-12 col-md-8 offset-md-2 col-lg-10 offset-lg-1 col-xl-8 offset-xl-2 head-sviaz">
+<div class="sviaz">
+
+  <div class="linker-home">
+   <div class = "row">
+    <div class="offset-1 col-10 offset-sm-1 col-sm-10 offset-lg-1 col-lg-10 rev-form" data-anijs="if: scroll, on: window, do: flipInY animated, before: scrollReveal">
+      <div class="pre-linker">
+        <div class="form-o">
+
+        <form>
+          <div class="form-group">
+            <label for="formGroupExampleInput">Имя</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ваше имя">
+          </div>
+          <div class="form-group">
+            <label for="formGroupExampleInput">Телефон</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ваш телефон">
+          </div>
+          <div class="btn-linker">
+
+                <button type="button" class="btn btn-primary">Свяжитесь со мной!</button>
+          </div>
+        </form>
+      </div>
+
+      </div>
+    </div>
+ 	</div>
+</div>
+
+
+</div>
+</div>
+		
+	</div> <!--send-sviaz-->
 
 
 
-	</div>
 
 
 	</div>
@@ -304,9 +341,65 @@
 
 
 
+<!--footer -->
+<div class="col-12 head-footer">
+<div class="footer">
+  <div class="foot-menu*">
+
+
+<div class="foot-about">
+
+
+	<div class="row flex-wrap justify-content-around">
+		<div class="col-sm-6 col-md-3 foot-item-menu">
+				<ul>
+				    <li>Главная</li>
+				    <li>Каталог</li>
+				    <li>О нас</li>
+				    <li>Отзывы</li>
+				    <li>Контакты</li>
+				    <li>Медиа</li>
+				</ul>
+		</div>
+		<div class="col-sm-6 col-md-3 foot-item-menu">
+				<img src= "{%static '/ds_app/images/ds-big-logo.png'%}" alt ="DS-MOTORS"> 
+
+		</div>
+
+
+	</div>
+
+
+
+  
+  
+</div>
+
+
+
+<div class="c2018">
+  © 2018 - <span>DS-Motors</span>
+</div>
+
+  </div>
+
+  <div class="social-btns">
+    <a class="btn facebook" href="#"><i class="fab fa-facebook"></i></a>
+    <a class="btn twitter" href="#"><i class="fab fa-twitter"></i></a>
+    <a class="btn google" href="#"><i class="fab fa-google"></i></a>
+    <a class="btn dribbble" href="#"><i class="fab fa-dribbble"></i></a>
+    <a class="btn skype" href="#"><i class="fab fa-skype"></i></a>
+  </div>
+
+
+
+
+</div>
+</div>
+<!--footer -->
 	
 
-</div>
+
 
 
 
@@ -317,124 +410,7 @@
 		
 
 	<script src="{%static 'ds_app/assets/js/main.js'%}"></script>
-	<!--
-	<script>
-
-
-//used for tabs
-//still learning. be kind.
-
-//get tabs module parent
-var tabsModule = document.body.querySelector(".ns-TabsModule");
-//get tab nav
-var tabNavList = document.body.querySelector(".ns-TabNav");
-//get all tab nav links
-var tabNavLinks = document.querySelectorAll(".ns-TabNav_Link");
-//get tab nav current link indicator
-var tabNavCurrentLinkindicator = tabNavList.querySelector(".ns-TabNav_Indicator");
-//get all tab panel elements
-var tabPanels = document.querySelectorAll(".ns-TabPanel");
-
-//show tab panel A first because panel A nav link has indicator on page load
-document.getElementById("ns-TabPanelA").style.display = "block";
-
-/**
-* position indicator function
-*/
-function positionIndicator() {
-  //get left position of tab nav ul
-  var tabNavListLeftPosition = tabNavList.getBoundingClientRect().left;
-  //get tab module parent current data value
-  var tabsModuleSectionDataValue = tabsModule.getAttribute("data-active-tab") || "A";
-  //get nav link span with data value that matches current tab module parent data value
-  var tabNavCurrentLinkText = tabNavList.querySelector("[data-tab='" + tabsModuleSectionDataValue + "'] span");
-  //get dimensions of current nav link span
-  var tabNavCurrentLinkTextPosition = tabNavCurrentLinkText.getBoundingClientRect();
-  //set indicator left position via CSS transform
-  //current nav link span left position - tab nav ul left position
-  //prefix me for live
-  tabNavCurrentLinkindicator.style.transform =
-    "translate3d(" +
-    (tabNavCurrentLinkTextPosition.left - tabNavListLeftPosition) +
-    "px,0,0) scaleX(" +
-    tabNavCurrentLinkTextPosition.width * 0.01 +
-    ")";
-}
-/**
-* fire position indicator function right away
-*/
-positionIndicator();
-
-/**
-* hide all tab panels function
-*/
-function hideAllTabPanels() {
-  //loop through all tab panel elements
-  for (i = 0; i < tabPanels.length; i++) {
-    //remove style attribute from each tab panel element to hide them
-    tabPanels[i].removeAttribute("style");
-  }
-};
-
-/**
-* tab nav link function
-* tab nav link event shows matching panel and positions the indicator
-*/
-var tabNavLinkEvent = function() {
-  //get this link data value
-  var thisLink = this.getAttribute("data-tab");
-  //get this link href value
-  var thisHref = this.getAttribute("href");
-  //get tab panel element with ID that matches this link href value
-  var thisTabPanel = document.querySelector(thisHref);
-  //set tab module parent data to this link data value
-  tabsModule.setAttribute("data-active-tab", thisLink);
-  //fire hide all tab panels function
-  hideAllTabPanels();
-  //get tab panel element with ID that matches this link href value and set its style to show it
-  thisTabPanel.style.display = "block";
-  //fire the position indicator function
-  positionIndicator();
-};
-
-/**
-* loop through all nav links and add event
-* need to change to parent element and use e.target maybe
-*/
-for (var i = 0; i < tabNavLinks.length; i++) {
-  //for each nav link, add click event that fires tab nav link click event function
-  tabNavLinks[i].addEventListener("click", tabNavLinkEvent, false);
-}
-
-/** 
-* should really position indicator from parent left edge rather than body, 
-* to keep indicator in position on resize. meh
-* for now, here's a quick win because i'm tired 
-* https://developer.mozilla.org/en-US/docs/Web/Events/resize 
-*/
-(function() {
-  window.addEventListener("resize", resizeThrottler, false);
-  //someone smarter than me code
-  var resizeTimeout;
-  function resizeThrottler() {
-    if (!resizeTimeout) {
-      resizeTimeout = setTimeout(function() {
-        resizeTimeout = null;
-        actualResizeHandler();
-      }, 66);
-    }
-  }
-  //function to fire after resize timeout delay
-  function actualResizeHandler() {
-    //fire the position indicator function
-    positionIndicator();
-  }
-})();
-
-
-	</script>
-
--->
+	
 
 
 </body>
