--- a/ds_app/templates/ds_app/index.html
+++ b/ds_app/templates/ds_app/index.html
@@ -14,6 +14,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet"> 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Anton|Lobster|Roboto" rel="stylesheet">
+
+
+       
+        
 
 
 
@@ -29,8 +34,26 @@
 		<div class="row flex-wrap justify-content-between">
 			<div class="logo col-sm-6 col-md-3">
 				<img src= "{%static '/ds_app/images/ds-big-logo.png'%}" alt ="DS-MOTORS"> 	
+				<br><span>ГРУППА КОМПАНИЙ 'SAMPO LGC'</span>
+			</div>
+
+			
+			<!--
+			<div class="col-sm-6 col-md-3 sampo">
+				<img src= "{%static '/ds_app/images/sampo.png'%}" alt ="Группа компаний Сампо"> 	
 		
 			</div>
+		-->
+		<div class="col-sm-6 col-md-3 deviz-header">
+				Качество, проверенное временем!<br><br>
+				<span>Надежность, доказанная результатом..</span> 	
+		
+			</div>
+			
+
+			
+
+			
 
 			<div class="adress col-sm-6 col-md-3">
 				<!--Ваш город: 
@@ -42,15 +65,25 @@
 						<form class="form-inline">
 						  <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Ваш город:</label>
 						  <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-						     <option selected>Петрозаводск</option>
-						    <option value="1">Москва</option>
+						    <option selected>Петрозаводск</option>
+						    <option>Москва</option>
+						    <option>Екатеринбург</option>
+						    <option>Новосибирск</option>
+						    <option>Челябинск</option>
+						    <option>Хабаровск</option>
+						    <option>Казань</option>
+						    <option>Нижний Новгород</option>
+						    <option>Уфа</option>
+						    <option>Ростов-на-Дону</option>
+						    <option>Краснодар</option>
+
 						  </select>
 
 						</form>
 
 
 						<ul class = 'adress-ul'>
-						<li id ='adr-info'></li>
+						<li id ='adr-info'><i class="fas fa-phone" style="color:#FDC300"></i> 0-800-xxx-xx-xx</li>
 						<li id="adr-tel"></li>
 						<li id ="adr-grafic"></li>
 						</ul>
@@ -59,7 +92,7 @@
 
 
 			</div>
-
+		
 			<div class="col-sm-6 col-md-3 zakaz-outer">
 			
 			
@@ -69,11 +102,7 @@
 					
 				</div>
 			</div>
-
-			<div class="col-sm-6 col-md-3 sampo">
-				<img src= "{%static '/ds_app/images/sampo.png'%}" alt ="Группа компаний Сампо"> 	
-		
-			</div>
+	
 		
 			
 		</div>
@@ -90,7 +119,7 @@
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    <ul class="navbar-nav mx-auto">
 	      <li class="nav-item active main-m">
-	        <a class="nav-link" href="#">О компании <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="#">ГЛАВНАЯ<span class="sr-only">(current)</span></a>
 	      </li>
 	      <!--
 	      <li class="nav-item active">
@@ -99,30 +128,40 @@
 			-->
 			<li class="nav-item active dropdown main-m">
 	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          Наши партнеры
+	          КАТАЛОГ
 	        </a>
 	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-	          <a class="dropdown-item" href="#">Atlas-Copco</a>
-	          <a class="dropdown-item" href="#">Epiroc</a>
-	           <a class="dropdown-item" href="#">Klampfer</a>
-	          <div class="dropdown-divider"></div>
-	          <a class="dropdown-item" href="#">Сделать заказ</a>
-	        </div>
-	      </li>
-	      <li class="nav-item active dropdown main-m">
-	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          Запчасти
-	        </a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-	          <a class="dropdown-item" href="#">Каталог</a>
-	          <a class="dropdown-item" href="#">Поиск по номеру</a>
+	          <a class="dropdown-item" href="#">Электрофикация</a>
+	          <a class="dropdown-item" href="#">Силовые установки</a>
+	           <a class="dropdown-item" href="#">Гидравлика</a>
 	          <div class="dropdown-divider"></div>
 	          <a class="dropdown-item" href="#">Сделать заказ</a>
 	        </div>
 	      </li>
 	      <li class="nav-item active main-m">
-	        <a class="nav-link" href="#">Контакты</a>
+	        <a class="nav-link" href="#">О КОМПАНИИ</a>
 	      </li>
+	      <li class="nav-item active main-m">
+	        <a class="nav-link" href="#">ДОКУМЕНТАЦИЯ</a>
+	      </li>
+	      <li class="nav-item active main-m">
+	        <a class="nav-link" href="#">РЕШЕНИЯ</a>
+	      </li>
+	      <li class="nav-item active dropdown main-m">
+	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	          ПАРТНЕРЫ
+	        </a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	          <a class="dropdown-item" href="#">Партнер №1</a>
+	          <a class="dropdown-item" href="#">Партнер №2</a>
+	          <div class="dropdown-divider"></div>
+	          <a class="dropdown-item" href="#">Сотрудничество</a>
+	        </div>
+	      </li>
+	      <li class="nav-item active main-m">
+	        <a class="nav-link" href="#">КОНТАКТЫ</a>
+	      </li>
+	      
 	    </ul>
 	    <form class='searchForm'>
 	      <input class="form-control" type="search" placeholder="Поиск по артикулу" aria-label="Search">
@@ -410,7 +449,8 @@
 		
 
 	<script src="{%static 'ds_app/assets/js/main.js'%}"></script>
-	
+
+
 
 
 </body>
